# nedit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  diff.txt  install.ps1  install.sh
.antigravitycli/: 604317a6-1a3a-436f-8069-b891414d0111.json
.github/workflows/: build.yml  ci.yml  test_install.yml
docs/: binds.md  docs.md  lua.md
scratch/: PERFORMANCE_REPORT.md  ui_fix.rs
src/: app.rs  buffer.rs  clipboard.rs  config.rs  explorer.rs  i18n.rs  input.rs  lib.rs  lua.rs  main.rs  ui.rs
src/app/: app.rs  file_ops.rs  fuzzy.rs  inner.rs  live_script.rs  mod.rs  scripting.rs  theme.rs  types.rs  workspace.rs
src/buffer/: autocomplete.rs  buffer.rs  clipboard.rs  column.rs  cursor.rs  editing.rs  history.rs  inner.rs  mod.rs  selection.rs
src/clipboard/: clipboard.rs  inner.rs  mod.rs
src/config/: config.rs  inner.rs  keybinds.rs  mod.rs
src/explorer/: explorer.rs  inner.rs  items.rs  mod.rs
src/i18n/: i18n.rs  inner.rs  mod.rs
src/input/: mod.rs  templates.rs
src/lua/: actions.rs  context.rs  inner.rs  lua.rs  mod.rs
src/ui/: colors.rs  icons.rs  layout.rs  mod.rs  render.rs  render.rs_tmp  welcome.rs
tests/: app.rs  buffer.rs  config.rs  integration_bin.rs  integration_lib.rs
tests/common/: mod.rs
themes/: nedit-dark.tmTheme
