[package]
name = "nedit"
version = "0.4.1-unstable.2"
edition = "2021"

[lib]
name = "nedit"
path = "src/lib.rs"

[[bin]]
name = "nedit"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ropey = "1.6.1"
syntect = "5.3.0"
arboard = "3.6.1"
walkdir = "2.5.0"
unicode-width = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
toml = "0.8"
once_cell = "1.19"
dirs = "5.0"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
notify = "6.1.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
